# testopenapi

fabien0102/: package.json
ferdikloomen/: package-lock.json
ferdikloomen/tpproj/: index.ts
okapirocket/: Cargo.toml  transaction.json
old/fabien0102/: openapi-codegen.config.ts  package-lock.json
old/ferdikloomen/: generate.sh
old/ferdikloomen/tpproj/: index.ts  package-lock.json  package.json
old/okapirocket/src/: main.rs
old/openapitools/: .gitignore  Cargo.toml  README.md  api.ts  transaction.json
old/openapitools/.openapi-generator/: FILES
old/openapitools/src/apis/: configuration.rs  mod.rs  users_api.rs
old/openapitools/src/models/: access_key.rs  access_key_permission.rs  access_key_permission_one_of.rs  access_key_permission_view.rs  access_key_permission_view_one_of.rs  access_key_permission_view_one_of_function_call.rs  access_key_view.rs  action.rs  action_error.rs  action_error_kind.rs  action_error_kind_one_of.rs  action_error_kind_one_of_1.rs  action_error_kind_one_of_10.rs  action_error_kind_one_of_10_tries_to_stake.rs  action_error_kind_one_of_11.rs  action_error_kind_one_of_11_insufficient_stake.rs  action_error_kind_one_of_12.rs  action_error_kind_one_of_13.rs  action_error_kind_one_of_14.rs  action_error_kind_one_of_15.rs  action_error_kind_one_of_16.rs  action_error_kind_one_of_16_delegate_action_sender_does_not_match_tx_receiver.rs  action_error_kind_one_of_17.rs  action_error_kind_one_of_18.rs  action_error_kind_one_of_19.rs  (+210 more)
old/progenitor/: transaction.json
old/swaggerdocker/checkrs/: Cargo.toml
old/testokapi/src/: main.rs
old/testpaper/src/: main.rs
old/testutoipa/: Cargo.toml
old/yerpctest/: Cargo.toml
openapitools/: api.ts  index.ts  kek.yaml
progenitor/: Cargo.toml  transaction.json  tx.py
progenitor/codeprogen/: Cargo.toml
progenitor/codeprogen/src/: main.rs
progenitor/keeper/: Cargo.toml
progenitor/keeper/src/: lib.rs
progenitor/tmp/: lib-all.rs  lib-nodeny.rs  lib-noflatten.rs  tx-all.json  tx-nodeny.json  tx-noflatten.json
progenitor/user/: Cargo.toml  output.txt  result.jsonrs  tmp.json  tmp.py
progenitor/user/src/: main.rs
testapistos/: Cargo.toml  openapi.json
testapistos/src/: main.rs
testokapi/: Cargo.toml  openapi.json
testokplain/: Cargo.toml  check.py  tmp.json  transaction.json  transaction.yaml  transaction2.yaml  transaction_req.json
testokplain/src/: main.rs
testpaper/: Cargo.toml  apiv2.json  apiv3.json
testutoipa/src/: main.rs
yerpctest/src/: main.rs
(+1 files in other folders)
