[package]
name = "testokplain"
version = "0.1.0"
edition = "2021"

[dependencies]
schemars = "1.0.0-alpha.17"
serde_json = "1.0.139"
okapi = { path = "../okapi/okapi" } # OpenAPI generation
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
near-jsonrpc-primitives = { path = "../../nearcore/chain/jsonrpc-primitives", features = ["full"] }
near-primitives = { path = "../../nearcore/core/primitives" }
near-time = { path = "../../nearcore/core/time", features = ["clock"] }
near-chain-configs = { path = "../../nearcore/core/chain-configs" }